# spellchecker

./: .gitignore  CMakeLists.txt  README.md
include/: autocomplete.h  spellcheck.h  trie.h
mistake-generator/: CMakeLists.txt
mistake-generator/sources/: main.c
sources/: main.c  spellcheck.c  trie.c
spellchecker/: CMakeLists.txt
spellchecker/sources/: autocomplete.c  spellcheck.c  trie.c
